gatekeeper/capabilities/capable-pod-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: capable-pod-allowed
  namespace: test
spec:
  containers:
  - name: capable-container
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        add: ["NET_ADMIN", "SYS_TIME"]
