gatekeeper/capabilities/non-capable-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: non-capable-pod
spec:
  containers:
  - name: non-capable-container
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop:
          - all
